# PictureAnalysis

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: mainwindow.h  network_functions.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui  network_functions.cpp
